--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>TaniHarjo</title>
-    <link rel="stylesheet" href="Style.css"> <!-- Menggunakan referensi CSS -->
+    <link rel="stylesheet" href="style.css"> <!-- Menggunakan referensi CSS -->
     <!-- Library Chart.js dan adapter waktu (Luxon) -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/luxon@3/build/global/luxon.min.js"></script>
